corrected the Title.

--- a/views/login.html
+++ b/views/login.html
@@ -1,7 +1,7 @@
 <div id="jumbo" class="jumbotron">
       <div class="container" style="text-align: -webkit-center;">
         <h1>
-          Trinity High School
+          Gardens of Kona
         </h1>
         <div class="page-header">
         </div>
